cmake_minimum_required(VERSION 3.20)
project(TrabalhoPOO)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabalhoPOO main.cpp Ilha.cpp Ilha.h Trabalhadores.cpp Trabalhadores.h Zona.cpp Zona.h Edificio.cpp Edificio.h Comandos.cpp Comandos.h Interface.cpp Interface.h Mineiro.cpp Mineiro.h Operario.cpp Operario.h Lenhador.cpp Lenhador.h Pastagem.cpp Pastagem.h Deserto.cpp Deserto.h Floresta.cpp Floresta.h Montanha.cpp Montanha.h Pantano.cpp Pantano.h Eolico.cpp Eolico.h MinaFerro.cpp MinaFerro.h MinaCarvao.cpp MinaCarvao.h CentralEletrica.cpp CentralEletrica.h Bateria.cpp Bateria.h Fundicao.cpp Fundicao.h Recursos.cpp Recursos.h Ferro.cpp Ferro.h BarraAco.cpp BarraAco.h Carvao.cpp Carvao.h Madeira.cpp Madeira.h VigasMadeira.cpp VigasMadeira.h Eletricidade.cpp Eletricidade.h EdificioX.cpp EdificioX.h)
